Fixing Modal header bottom spacing.

--- a/frontend/src/App/styles/base/_typography.scss
+++ b/frontend/src/App/styles/base/_typography.scss
@@ -303,6 +303,10 @@
     text-align: center;
     font-family: 'gorditaregular', serif;
 
+    @media (max-width: 950px) {
+      margin-bottom: 0;
+    }
+
     @media (max-width: 700px) {
       font-size: 2.8rem;
     }
